--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "nodemon src/index.ts",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,7 @@
     "dotenv": "^16.3.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "uuid": "^9.0.0"
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.60.1",
